@@ -34,6 +34,7 @@ namespace Rcpp {
     }
 }
 
+#if UseWithStrings
 void date_print(boost::gregorian::date *d) {
     std::cout << *d << std::endl;
 }
@@ -52,6 +53,7 @@ Rcpp::Date Date_fromString(boost::gregorian::date *d, std::string s) {
 Rcpp::Date Date_fromUndelString(boost::gregorian::date *d, std::string s) { 
     return Rcpp::wrap(boost::gregorian::date(boost::gregorian::from_undelimited_string(s))); 
 }
+#endif
 
 // these set the date from the clock, in local or universal time
 void date_localDay(boost::gregorian::date *d) { *d = boost::gregorian::date(boost::gregorian::day_clock::local_day()); }
@@ -66,10 +68,12 @@ int date_day(boost::gregorian::date *d) { return static_cast<int>( d->day() ); }
 int date_dayofweek(boost::gregorian::date *d) { return static_cast<int>( d->day_of_week() ); }
 int date_dayofyear(boost::gregorian::date *d) { return static_cast<int>( d->day_of_year() ); }
 
+#if UseWithStrings
 // these extract the requested date portion or representation as an integer
 std::string date_toString(boost::gregorian::date *d) { return boost::gregorian::to_simple_string(*d); }
 std::string date_toIsoString(boost::gregorian::date *d) { return boost::gregorian::to_iso_string(*d); }
 std::string date_toExtIsoString(boost::gregorian::date *d) { return boost::gregorian::to_iso_extended_string(*d); }
+#endif
 
 //Date date_toDate(date *d) { // earlier form before wrap()
 //    date::ymd_type ymd = d->year_month_day();
@@ -118,11 +122,13 @@ RCPP_MODULE(bdt) {
     .constructor("default constructor")
     .constructor<int, int, int>("constructor from year, month, day")
 
+#if UseWithStrings
     // free functions defined above with date* as first argument
     .method("fromString", &date_fromString, "create a date from a delimited string")
     .method("fromUndelString", &date_fromUndelString, "create a date from an un delimited string")
     .method("getDateFromString", &Date_fromString, "return a date from a delimited string")
     .method("getDateFromUndelString", &Date_fromUndelString, "return a date from an un delimited string")
+#endif
 
     .method("setFromLocalClock", &date_localDay, "create a date from current local clock")
     .method("setFromUTC", &date_utcDay, "create a date from current universal clock")
@@ -137,9 +143,11 @@ RCPP_MODULE(bdt) {
     .method("getDayOfWeek", &date_dayofweek, "returns the day of the week")
     .method("getDayOfYear", &date_dayofyear, "returns the day of the year")
 
+#if UseWithStrings
     .method("getString", &date_toString, "returns a string representation")
     .method("getIsoString", &date_toIsoString, "returns an ISO string representation")
     .method("getExtIsoString", &date_toExtIsoString, "returns an extended ISO string representation")
+#endif
 
     .method("getDate", &date_toDate, "returns an R Date object")
 
